# SmartMirror-Facerecognition

./: .gitignore  README.md  SmartMirror-Facerecognition.js  node_helper.js  smartmirror-facerecognition.js
FaceRecognition_CMake/: CMakeLists.txt
FaceRecognition_CMake/inc/: buffers.h  common.h
FaceRecognition_CMake/model/: people.txt
FaceRecognition_CMake/src/: FaceDetector.h  FaceRecognition.h  FaceRecognitionRT.h  HungarianAlgorithm.h  KalmanBoxTracker.h  RealSense.h  SORT.h  TensorflowHelper.h  Timer.h  Types.h  Utils.h  main.cpp
facerecognition/: FaceRecognitionClass.py  facerecognition.py  facerecognition_track.py  facerecognition_tracked.py  start_recognition_gstreamer.py  start_recognition_webcam.py  start_recognition_webcam_profile.py  train_additional_pics_from_webcam.py  train_from_saved_images.py
facerecognition/classifier/: FaceClassifier.py
facerecognition/detection/: FaceDetector.py
facerecognition/facedatabase/: faces.npy  people.npy  trained_classifier.pkl
facerecognition/recognition/: FaceRecognition.py  facenet.py
